fixed spacing

--- a/stylesheets/gears.css
+++ b/stylesheets/gears.css
@@ -13,7 +13,7 @@
     margin: 0px auto;
     position: absolute;
     top: 125rem;
-    left: 60rem;
+    left: 65%;
 }
 .gears{
   width:48%;
